# waifu2x-ncnn-vulkan-python

./: .gitmodules  Docs.md  MANIFEST.in  README.md  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/: FUNDING.yml
.github/workflows/: CI.yml  ci.yml  release.yml
src/: CMakeLists.txt  waifu2x_wrapped.cpp  waifu2x_wrapped.h
waifu2x_ncnn_vulkan_python/: CMakeLists.txt  waifu2x.i  waifu2x_ncnn_vulkan.py
